Landing section was added

--- a/Css Folder/index.css
+++ b/Css Folder/index.css
@@ -78,9 +78,22 @@ a {
 	justify-content: center;
 	align-items: center;
 }
+@media (max-width: 767px) {
+	.header .logo {
+		width: 100%;
+		height: 60px;
+		font-size: 30px;
+	}
+}
 .header .main-nav {
 	display: flex;
 }
+@media (max-width: 767px) {
+	.header .main-nav {
+		margin: auto;
+	}
+}
+
 .header .main-nav > li > a {
 	display: flex;
 	justify-content: center;
@@ -91,6 +104,13 @@ a {
 	position: relative;
 	transition: var(--main-transition);
 	overflow: hidden;
+}
+@media (max-width: 767px) {
+	.header .main-nav > li > a {
+		padding: 0 10px;
+		height: 45px;
+		font-size: 15px;
+	}
 }
 .header .main-nav > li > a::before {
 	content: "";
@@ -110,3 +130,112 @@ a {
 	left: 0;
 }
 /* end header */
+/* Start Landing */
+.landing {
+	position: relative;
+}
+.landing::before {
+	content: "";
+	position: absolute;
+	top: -17px;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #ececec;
+	z-index: -1;
+	transform: skewY(-6deg);
+	transform-origin: top left;
+}
+.landing .container {
+	min-height: calc(100vh - 73.6px);
+	display: flex;
+	align-items: center;
+	padding-bottom: 140px;
+}
+.landing .text {
+	flex: 1;
+}
+@media (max-width: 991px) {
+	.landing .text {
+		text-align: center;
+	}
+}
+.landing .text h1 {
+	letter-spacing: -2px;
+	font-size: 38px;
+	margin: 0;
+}
+@media (max-width: 767px) {
+	.landing .text h1 {
+		font-size: 30px;
+	}
+}
+.landing .text p {
+	margin: 5px 0 0;
+	font-size: 15px;
+	line-height: 1.8;
+	color: #666;
+}
+@media (max-width: 991px) {
+	.landing .text p {
+		padding: 20px 0 0;
+		margin: 10px auto;
+	}
+}
+@media (max-width: 767px) {
+	.landing .text p {
+		font-size: 18px;
+	}
+}
+.landing .container .image img {
+	position: relative;
+	width: 600px;
+	max-width: 100%;
+	animation: up-and-down 5s linear infinite;
+}
+@media (max-width: 991px) {
+	.landing .container .image img {
+		display: none;
+	}
+}
+.landing .go-down {
+	position: absolute;
+	left: 50%;
+	bottom: 30px;
+	transform: translateX(-50%);
+	color: var(--main-color);
+	transition: var(--main-transition);
+}
+.landing .go-down:hover {
+	color: var(--main-color-alt);
+}
+.landing .go-down i {
+	animation: bouncing 1.5s infinite;
+}
+
+/* End Landing */
+/* Start Animation */
+@keyframes up-and-down {
+	0%,
+	100% {
+		top: 0;
+	}
+	50% {
+		top: -40px;
+	}
+}
+@keyframes bouncing {
+	0%,
+	10%,
+	20%,
+	50%,
+	80%,
+	100% {
+		transform: translateY(0);
+	}
+	40%,
+	60% {
+		transform: translateY(-15px);
+	}
+}
+/* End Animation */
