--- a/Css Folder/index.css
+++ b/Css Folder/index.css
@@ -53,6 +53,17 @@
 		transform: translateX(10px);
 	}
 }
+@keyframes flashing {
+	0%,
+	40% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+		width: 200%;
+		height: 200%;
+	}
+}
 /* End Animation */
 /* Start global rules  */
 :root {
@@ -62,6 +73,7 @@
 	--main-transition: 0.3s;
 	--main-padding-top: 100px;
 	--main-padding-bottom: 100px;
+	--main-section-color: #ececec;
 }
 * {
 	-webkit-box-sizing: border-box;
@@ -460,3 +472,48 @@ a {
 	animation: moving-arrow 0.5s linear infinite;
 }
 /* End articles */
+/* Start gallery */
+.gallery {
+	padding-top: var(--main-padding-top);
+	padding-bottom: var(--main-padding-bottom);
+	position: relative;
+	background-color: var(--main-section-color);
+}
+.gallery .container {
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+	gap: 40px;
+}
+.gallery .box {
+	padding: 15px;
+	background-color: white;
+	box-shadow: 0px 12px 20px 0px rgb(0 0 0 / 13%),
+		0px 2px 4px 0px rgb(0 0 0 / 12%);
+}
+.gallery .box .image {
+	position: relative;
+	overflow: hidden;
+}
+.gallery .box .image::before {
+	content: "";
+	position: absolute;
+	width: 0px;
+	height: 0px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background-color: rgba(255, 255, 255, 0.204);
+	opacity: 0;
+	z-index: 2;
+}
+.gallery .box .image:hover::before {
+	animation: flashing 0.7s;
+}
+.gallery .box .image img {
+	max-width: 100%;
+	transition: var(--main-transition);
+}
+.gallery .box .image:hover img {
+	transform: rotate(5deg) scale(1.1);
+}
+/* Start gallery */
